[gd_scene load_steps=13 format=3 uid="uid://dmlerrfywmx4u"]

[ext_resource type="Script" path="res://Scripts/Objects/BillyLee.gd" id="1_jga6x"]
[ext_resource type="Texture2D" uid="uid://da74v2p2214wn" path="res://Assets/Objects/BillyLeeBody.png" id="2_vvhjv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_igybu"]
atlas = ExtResource("2_vvhjv")
region = Rect2(0, 0, 48, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_womin"]
atlas = ExtResource("2_vvhjv")
region = Rect2(144, 0, 48, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_cnwkw"]
atlas = ExtResource("2_vvhjv")
region = Rect2(0, 0, 48, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0mdv"]
atlas = ExtResource("2_vvhjv")
region = Rect2(192, 0, 48, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_uiswg"]
atlas = ExtResource("2_vvhjv")
region = Rect2(0, 0, 48, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgx01"]
atlas = ExtResource("2_vvhjv")
region = Rect2(48, 0, 48, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ug7l"]
atlas = ExtResource("2_vvhjv")
region = Rect2(96, 0, 48, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_x6jwc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_igybu")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_womin")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cnwkw")
}],
"loop": false,
"name": &"hit_1",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0mdv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uiswg")
}],
"loop": false,
"name": &"hit_2",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgx01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ug7l")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jl6t5"]
size = Vector2(17, 39)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_et48b"]
size = Vector2(19, 8)

[node name="BillyLee" type="CharacterBody2D"]
position = Vector2(2, 0)
collision_layer = 2
collision_mask = 0
script = ExtResource("1_jga6x")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_x6jwc")
animation = &"walk"
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_jl6t5")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(13, -9)
shape = SubResource("RectangleShape2D_et48b")
disabled = true
debug_color = Color(0, 0.635294, 0.407843, 0.419608)

[node name="HitboxTimer" type="Timer" parent="HitBox"]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="timeout" from="HitBox/HitboxTimer" to="." method="_on_hitbox_timer_timeout"]
